fix(Project):'Правки по коду'

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a href="#">Победители</a>
                     </div>
                 </div>
-                <div onclick="modalWindowOpen()" class="header_right">
+                <div onclick="openModalWindow()" class="header_right">
                     <div class="header_item enter">
                         <a href="#">Вход</a>
                     </div>
@@ -267,6 +267,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
